# Base-Project-Structure

./: CMakeLists.txt  README.md  main.cpp
